--- a/smartHome/app/src/main/res/layout/item.xml
+++ b/smartHome/app/src/main/res/layout/item.xml
@@ -1,21 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_marginTop="5dp"
+    android:layout_width="match_parent"
+    android:layout_margin="10dp"
     android:layout_height="wrap_content">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:gravity="right"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:layout_width="24dp"
-                android:src="@drawable/ic_more"
-                android:layout_height="24dp"/>
-        </LinearLayout>
         <LinearLayout
             android:paddingBottom="10dp"
             android:paddingLeft="20dp"
@@ -32,7 +23,7 @@
                     android:layout_height="48dp"/>
                 <Switch
                     android:id="@+id/switchLight"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginLeft="20dp"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent" />
             </LinearLayout>
