--- a/smartHome/app/src/main/res/layout/activity_login.xml
+++ b/smartHome/app/src/main/res/layout/activity_login.xml
@@ -104,6 +104,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/inputPassword" />
 
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:id="@+id/textWarning"
+        android:gravity="center"
+        android:textColor="#FF5722"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
 <!--    <TextView-->
 <!--        android:id="@+id/forgotPassword"-->
 <!--        android:layout_width="wrap_content"-->
