--- a/smartHome/app/src/main/res/layout/item_history.xml
+++ b/smartHome/app/src/main/res/layout/item_history.xml
@@ -8,13 +8,14 @@
         android:layout_height="wrap_content">
         <TextView
             android:id="@+id/textTime"
-            android:text="10h30p 20/10/2020"
+            android:text="20/10/2020 10:30"
             android:paddingLeft="20dp"
             android:textSize="18sp"
             android:gravity="center|left"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:layout_width="match_parent"
             android:layout_height="24dp"/>
-
         <ImageView
             android:layout_width="24dp"
             android:layout_height="24dp"
