--- a/smartHome/app/src/main/res/menu/menu_main.xml
+++ b/smartHome/app/src/main/res/menu/menu_main.xml
@@ -4,6 +4,8 @@
         android:title= "Thêm thẻ"/>
     <item android:id="@+id/getCards"
         android:title= "Danh sách thẻ"/>
+    <item android:id="@+id/changeDarkTheme"
+        android:title= "Đổi giao diện"/>
     <item android:id="@+id/logout"
         android:title= "Đăng xuất"/>
 </menu>
